pandaseq-2.vapi

/**
 * PANDAseq Illumina assembler
 *
 * Assemble paired FASTQ Illumina reads and strip the region between amplification primers.
 */
[CCode(cheader_filename = "pandaseq.h")]
namespace Panda {
	/**
	 * Codes used for logging conditions during the assembly
	 *
	 * Some of these are errors and some are informational.
	 * The variadic arguments provided are listed.
	 */
	[CCode(cname = "PandaCode", has_type_id = false, cprefix = "PANDA_CODE_")]
	public enum Code {
		/**
		 * Show version of the module API.
		 *
		 * (int api_version)
		 */
		API_VERSION,
		/**
		 * Invalid character in nucleotide data
		 *
		 * (panda_seq_identifier *id, int character)
		 */
		BAD_NT,
		/**
		 * The best computed overlap
		 *
		 * (panda_seq_identifier *id, int overlap)
		 */
		BEST_OVERLAP,
		/**
		 * A nucleotide copied during reconstruction of the forward sequence
		 *
		 * (panda_seq_identifier *id, int index_in_assembly, int index_in_reverse, panda_result *nt)
		 */
		BUILD_FORWARD,
		/**
		 * A nucleotide determined during reconstruction of the overlap region
		 *
		 * (panda_seq_identifier *id, int index_in_assembly, int index_in_forward, int index_in_reverse, panda_result *nt, panda_nt *forward, panda_nt *reverse)
		 */
		BUILD_OVERLAP,
		/**
		 * A nucleotide copied during reconstruction of the reverse sequence
		 *
		 * (panda_seq_identifier *id, int index_in_assembly, int index_in_reverse, panda_result *nt)
		 */
		BUILD_REVERSE,
		/**
		 * A //k//-mer found in the forward sequence
		 *
		 * (panda_seq_identifier *id, unsigned int kmer, ssize_t position)
		 */
		FORWARD_KMER,
		/**
		 * An incorrect Illumina FASTQ header
		 *
		 *  (const char *id)
		 */
		ID_PARSE_FAILURE,
		/**
		 * The //k//-mer table is too small for the sequence
		 *
		 * (panda_seq_identifer *id)
		 */
		INSUFFICIENT_KMER_TABLE,
		/**
		 * A //k//-mer is thrown away due to a collision
		 *
		 * (panda_seq_identifier *id, unsigned int kmer, ssize_t position)
		 */
		LOST_KMER,
		/**
		 * A reconstruction is rejected because the quality score is below threshold
		 *
		 * (panda_seq_identifier *id, double quality, double threshold)
		 */
		LOW_QUALITY_REJECT,
		/**
		 * A pair of bases disagree in the reconstruction
		 *
		 * (panda_seq_identifier *id, int index_in_forward, int index_in_reverse, panda_qual *forward, panda_qual *reverse)
		 */
		MISMATCHED_BASE,
		/**
		 * Display information about a module
		 *
		 * (PandaModule module)
		 */
		MOD_INFO,
		/**
		 * The computed sequence length is invalid
		 *
		 * (panda_seq_identifier *id)
		 */
		NEGATIVE_SEQUENCE_LENGTH,
		/**
		 * No sequence data is availble in the file
		 *
		 * (panda_seq_identifier *id)
		 */
		NO_DATA,
		/**
		 * The file could not be opened
		 *
		 * (const char *filename)
		 */
		NO_FILE,
		/**
		 * The forward primer cannot be found in the sequence
		 *
		 * (panda_seq_identifier *id)
		 */
		NO_FORWARD_PRIMER,
		/**
		 * The quality information is missing in the FASTQ file
		 *
		 * (panda_seq_identifier *id)
		 */
		NO_QUALITY_INFO,
		/**
		 * The reverse primer cannot be found in the sequence
		 *
		 * (panda_seq_identifier *id)
		 */
		NO_REVERSE_PRIMER,
		/**
		 * The Illumina headers from the forward and reverse sequences do not match
		 *
		 * (panda_seq_identifier *foward, panda_seq_identifier *reverse)
		 */
		NOT_PAIRED,
		/**
		 * A possible overlap has been determined
		 *
		 * (panda_seq_identifier *id, size_t overlap, size_t matches, size_t mismatches, size_t unknowns, double probability)
		 */
		OVERLAP_POSSIBILITY,
		/**
		 * Error parsing FASTQ data
		 *
		 * (panda_seq_identifier *id)
		 */
		PARSE_FAILURE,
		/**
		 * An input file ended in the middle of a FASTQ file
		 *
		 * (panda_seq_identifier *id)
		 */
		PREMATURE_EOF,
		/**
		 * Reconstruction will commence with provided parameters
		 *
		 * (panda_seq_identifier *id, int overlap, int forward_unpaired, int reverse_unpaired)
		 */
		RECONSTRUCTION_PARAM,
		/**
		 * The number of sequences rejected by a particular module
		 *
		 * (PandaModule module, long rejected_sequence_count)
		 * @see Assembler.module_stats
		 */
		REJECT_STAT,
		/**
		 * A //k//-mer found in the reverse sequence
		 *
		 * (panda_seq_identifier *id, unsigned int kmer, ssize_t position)
		 */
		REVERSE_KMER,
		/**
		 * The reconsructed sequence will exceed the memory buffer
		 *
		 * (panda_seq_identifier *id)
		 */
		SEQUENCE_TOO_LONG,
	}

	/**
	 * A single nucleotide
	 */
	[CCode(cname = "panda_nt", has_type_id = false, cprefix = "PANDA_NT_")]
	[Flags]
	public enum Nt {
		/**
		 * Adenine
		 */
		A,
		/**
		 * Cytosine
		 */
		C,
		/**
		 * Guanine
		 */
		G,
		/**
		 * Thyamine
		 */
		T;
		/**
		 * Is nucleotide degenerate?
		 */
		[CCode(cname = "PANDA_NT_IS_DEGN")]
		public bool is_degenerate();
		/**
		 * Is nucleotide all possible values?
		 */
		[CCode(cname = "PANDA_NT_IS_N")]
		public bool is_n();
		/**
		 * Get the nucleotide code for an ASCII character in IUPAC
		 */
		[CCode(cname = "panda_nt_from_ascii")]
		public static Nt from_ascii(char c);
		/**
		 * Get the complement nucleotide code for an ASCII character in IUPAC
		 */
		[CCode(cname = "panda_nt_from_ascii_complement")]
		public static Nt from_ascii_complement(char c);
		/**
		 * Convert a nucleotide to an IUPAC representation
		 */
		[CCode(cname = "panda_nt_to_ascii")]
		public char to_ascii();
	}

	/**
	 * The manager for an assembly
	 */
	[CCode(cname = "struct panda_assembler", has_type_id = false, ref_func = "panda_assembler_ref", unref_func = "panda_assembler_unref")]
	public class Assembler {
		/**
		 * The number of sequences processed so far.
		 */
		public long count {
			[CCode(cname = "panda_assembler_get_count")]
			get;
		}

		/**
		 * The number of sequences rejected because they contain degenerate (N) bases.
		 */
		public long degenerate_count {
			[CCode(cname = "panda_assembler_get_degenerate_count")]
			get;
		}

		/**
		 * Reject sequences with degenerate (N) bases.
		 */
		public bool disallow_degenerates {
			[CCode(cname = "panda_assembler_get_disallow_degenerates")]
			get;
			[CCode(cname = "panda_assembler_set_disallow_degenerates")]
			set;
		}

		/**
		 * The minimum error estimation in the sequence data (epsilon)
		 */
		public double error_estimation {
			[CCode(cname = "panda_assembler_get_error_estimation")]
			get;
			[CCode(cname = "panda_assembler_set_error_estimation")]
			set;
		}

		/**
		 * The number of sequences rejected because the overlap could not be determined.
		 */
		public long failed_alignment_count {
			[CCode(cname = "panda_assembler_get_failed_alignment_count")]
			get;
		}

		/**
		 * The forward primer sequence to be stripped
		 *
		 * This is mutually exclusive with {@link forward_trim}
		 */
		public Nt[]? forward_primer {
			[CCode(cname = "panda_assembler_get_forward_primer")]
			get;
			[CCode(cname = "panda_assembler_set_forward_primer")]
			set;
		}

		/**
		 * The amount of forward sequence to strip
		 *
		 * This is mutually exclusive with {@link forward_primer}
		 */
		public size_t forward_trim {
			[CCode(cname = "panda_assembler_get_forward_trim")]
			get;
			[CCode(cname = "panda_assembler_set_forward_trim")]
			set;
		}

		/**
		 * The number of sequences rejected because the quality score is too low.
		 */
		public long low_quality_count {
			[CCode(cname = "panda_assembler_get_low_quality_count")]
			get;
		}

		/**
		 * The minimum overlap two sequences must have to be accepted. It must be greater than one.
		 */
		public int minimum_overlap {
			[CCode(cname = "panda_assembler_get_minimum_overlap")]
			get;
			[CCode(cname = "panda_assembler_set_minimum_overlap")]
			set;
		}

		/**
		 * The number of sequences rejected because the forward primer could not be aligned.
		 */
		public long no_forward_primer_count {
			[CCode(cname = "panda_assembler_get_no_forward_primer_count")]
			get;
		}

		/**
		 * The number of sequences rejected because the reverse primer could not be aligned.
		 */
		public long no_reverse_primer_count {
			[CCode(cname = "panda_assembler_get_no_reverse_primer_count")]
			get;
		}

		/**
		 * The number of sequences accepted.
		 */
		public long ok_count {
			[CCode(cname = "panda_assembler_get_ok_count")]
			get;
		}

		/**
		 * The reverse primer sequence to be stripped
		 *
		 * This is mutually exclusive with {@link reverse_trim}
		 */
		public Nt[]? reverse_primer {
			[CCode(cname = "panda_assembler_get_reverse_primer")]
			get;
			[CCode(cname = "panda_assembler_set_reverse_primer")]
			set;
		}

		/**
		 * The amount of reverse sequence to strip
		 *
		 * This is mutually exclusive with {@link reverse_primer}
		 */
		public size_t reverse_trim {
			[CCode(cname = "panda_assembler_get_reverse_trim")]
			get;
			[CCode(cname = "panda_assembler_set_reverse_trim")]
			set;
		}

		/**
		* The minimum quality threshold to have an assembly accepted. Must be between 0 and 1, exclusive.
		*/
		public double threshold {
			[CCode(cname = "panda_assembler_get_threshold")]
			get;
			[CCode(cname = "panda_assembler_set_threshold")]
			set;
		}

		/**
		 * Open a pair of bzipped for assembly.
		 *
		 * @param qualmin the value to strip from the quality scores. Usually 33 or 64, depending on CASAVA version.
		 */
		[CCode(cname = "panda_assembler_open_bz2")]
		public static Assembler? open_bz2(string forward, string reverse, owned Logger logger, uint8 qualmin = 33);

		/**
		 * Open a pair of gzipped (or uncompressed files) for assembly.
		 *
		 * @param qualmin the value to strip from the quality scores. Usually 33 or 64, depending on CASAVA version.
		 */
		[CCode(cname = "panda_assembler_open_gz")]
		public static Assembler? open_gz(string forward, string reverse, owned Logger logger, uint8 qualmin = 33);

		/**
		 * Create a new assembler from a sequence source.
		 *
		 * @param next the function to call to get the next sequence. The assembler does not manage the memory of the returned arrays, but assume it may use them until the next call or destruction. If not provided, you may use {@link assemble} but not {@link next}
		 * @param logger the function to call to report information to the user.
		 */
		[CCode(cname = "panda_assembler_new")]
		public Assembler(owned NextSeq? next, owned Logger logger);

		/**
		 * Create a new assembler for given to FASTQ streams.
		 * @see create_fastq_reader
		 */
		[CCode(cname = "panda_assembler_new_fastq_reader")]
		public Assembler.fastq (owned NextChar forward, owned NextChar reverse, owned Logger logger, uint8 qualmin = 33);

		/**
		 * Assemble a single sequence pair not drawn from the sequence stream.
		 *
		 * This works exactly like {@link next}, but instead of asking the {@link NextSeq} for the data, it expects this information to be provided.
		 */
		[CCode(cname = "panda_assembler_assemble")]
		public unowned result_seq? assemble(identifier id, qual[] forward, qual[] reverse);

		/**
		 * Add a module to this assembly process.
		 *
		 * Sequences will be checked using this module.
		 */
		[CCode(cname = "panda_assembler_add_module")]
		public void add_module(Module module);

		/**
		 * Log the number of sequences rejected by each module.
		 */
		[CCode(cname = "panda_assembler_module_stats")]
		public void module_stats();

		/**
		 * Assemble the next sequence from the input
		 *
		 * This function will process sequences until one is assembled successfully or no more sequences are available from the input stream, after which it will return null.
		 * The returned sequence becomes invalid after the next call.
		 */
		[CCode(cname = "panda_assembler_next")]
		public unowned result_seq? next();

		/**
		 * Increment reference count.
		 */
		[CCode(cname = "panda_assembler_ref")]
		public unowned Assembler @ref();
		/**
		 * Decrement reference count.
		 */
		[CCode(cname = "panda_assembler_unref")]
		public void unref();
	}
